--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "workbench.editor.enablePreview": false
+    "workbench.editor.enablePreview": false,
+    "files.associations": {
+        "ostream": "cpp",
+        "string": "cpp",
+        "iomanip": "cpp"
+    }
 }
