test:now speed can be float

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "workbench.editor.enablePreview": false,
     "files.associations": {
+        "*.html": "html",
         "ostream": "cpp",
         "string": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "map": "cpp"
     }
 }
